button row in subcluster management no longer uneven spacing between buttons

--- a/career-clusters/src/components/StaffComponents/ManagementPages/ManagementSubCluster.css
+++ b/career-clusters/src/components/StaffComponents/ManagementPages/ManagementSubCluster.css
@@ -19,7 +19,7 @@
 }
 
 .subcluster_m h2 {
-    width:29%;
+    width:34%;
     align-self: center;
     margin-left:3%;
     font-size: 20px;
@@ -30,7 +30,6 @@
 .Name {
     width:15%;
     margin:auto;
-    height:100%;
 }
 
 .editName {
@@ -50,7 +49,6 @@
 /* Edit description of subcluster */
 .Description {
     width:15%;
-    margin:auto;
     height:100%;
 }
 
@@ -70,7 +68,6 @@
 /* Edit Salary for subcluster */
 .Salary {
     width:15%;
-    margin:auto;
     height:100%;
 }
 
@@ -91,7 +88,6 @@
 
 .GrowthRate {
     width:15%;
-    margin:auto;
     height:100%;
 }
 
@@ -113,7 +109,6 @@
 
 .Education {
     width:15%;
-    margin:auto;
     height:100%;
 }
 
@@ -134,7 +129,6 @@
 
 .Delete {
     width:15%;
-    margin:auto;
     height:100%;
 }
 
@@ -144,8 +138,7 @@
     border:3px solid var(--green);
     width:100px;
     background-color:var(--green);
-    height:35px;
-    margin-left:5%;
+    height:40px;
 }
 
 .deleteButton:hover {
@@ -156,7 +149,6 @@
 
 .Image {
     width:15%;
-    margin:auto;
     height:100%;
 }
 
@@ -286,7 +278,8 @@
 .sc_editbar {
     display:inline-flex;
     height:5rem;
-    padding-top:13px;
+    padding-top:12px;
+    justify-content:space-between;
 }
 
 .standardIn-popup {
